<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:weightSum="10"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/InputText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/black_blue"
        android:text=""
        android:textColor="#f6f6f6"
        android:textSize="30sp"
        android:textAlignment="viewEnd"
        android:gravity="bottom"
        android:maxLines="1"
        android:paddingEnd="20dp"
        tools:ignore="RtlCompat" />
    <TextView
        android:id="@+id/OutputText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/black_blue"
        android:text="@string/zero"
        android:textColor="#fff"
        android:textSize="50sp"
        android:textAlignment="viewEnd"
        android:maxLines="1"
        android:paddingEnd="20dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical"
        android:background="@color/black_blue">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="20dp"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">

                    <Button
                        android:id="@+id/btnFac"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:textAlignment="center"
                        android:text="@string/Factorial"
                        android:textColor="@color/light_blue"
                        android:background= "@drawable/number_button"
                        android:layout_weight="1"
                        />

                    <Button
                        android:id="@+id/btnSin"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:textAlignment="center"
                        android:text="@string/sin"
                        android:textColor="@color/light_blue"
                        android:layout_weight="1"
                        android:background= "@drawable/number_button"

                        />
                    <Button

                        android:id="@+id/btnPer"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:textAlignment="center"
                        android:text="@string/percent"
                        android:textSize="20sp"
                        android:textColor="@color/light_blue"
                        android:layout_weight="1"
                        android:background= "@drawable/number_button"

                        />
                    <Button
                        android:id="@+id/btnXX"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="center"
                        android:layout_margin="4dp"
                        android:textAlignment="center"
                        android:text="@string/mu"
                        android:textColor="@color/light_blue"
                        android:layout_weight="1"
                        android:background= "@drawable/number_button"

                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">
                    <Button
                        android:id="@+id/btnAc"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/ac_button"
                        android:text="@string/Ac"
                        android:layout_margin="4dp"
                        android:textColor="#A5A5A5"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />

                    <Button
                        android:id="@+id/btnDelete"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="4dp"
                        android:layout_weight="1"
                        android:background="@drawable/ac_button"
                        android:contentDescription="@string/C"
                        android:foreground="@drawable/backspace_icon_foreground"
                        android:text=""
                        android:textColor="#A5A5A5"
                        android:textSize="30sp" />
                    <Button
                        android:id="@+id/btnQuote"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:text="@string/Quotes"
                        android:layout_margin="4dp"
                        android:textColor="@color/round_button_color"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        android:id="@+id/btnDiv"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:text="@string/Divisor"
                        android:layout_margin="4dp"
                        android:textColor="@color/round_button_color"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number7"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number8"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn9"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number9"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btnMul"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:text="@string/Multiply"
                        android:layout_margin="4dp"
                        android:textColor="@color/round_button_color"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number4"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/bnt5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number5"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number6"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btnPlus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:text="@string/Plus"
                        android:layout_margin="4dp"
                        android:textColor="@color/round_button_color"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />

                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="4"
                    tools:ignore="UselessParent">
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number1"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number2"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number3"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btnMinus"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/round_button"
                        android:text="@string/Minus"
                        android:layout_margin="4dp"
                        android:textColor="@color/round_button_color"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    tools:ignore="UselessParent">
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btn0"
                        android:layout_width="456dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Number0"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btnDot"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Dot"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                    <Button
                        style="@style/Animation.Design.BottomSheetDialog"
                        android:id="@+id/btnEqual"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/number_button"
                        android:text="@string/Equal"
                        android:layout_margin="4dp"
                        android:textColor="@color/light_blue"
                        android:textSize="30sp"
                        android:layout_weight="1"
                        />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>


